# broker

./: .gitignore  CMakeLists.txt
common/include/: error_codes.h  singleton.h
include/: connection.h  exchange.h  logger.h  message.h  message_broker.h  message_broker_factory.h  message_listener.h  message_publisher.h  observer.h  observerable.h  profile.h  queue.h  queue_params.h  singleton.h  threadsafe_queue.h  utils.h
src/: main.cpp  message_broker.cpp  message_publisher.cpp
tests/: CMakeLists.txt  tests.cpp
tests/message_listener_tests/: message_listener_tests_fixture.h
